# simple_backend_cpp

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  main.cpp
handlers/: CMakeLists.txt  global_handler.hpp  ping.cpp  ping.hpp
include/: server.hpp
server/: CMakeLists.txt  server.cpp
server/handlers/: CMakeLists.txt
src/: CMakeLists.txt  server.cpp
